tests/samples/positive/types/reference_slice_index.ax
module reference_slice_index;

fn first(values: &[]i32) -> i32 {
  return values[0];
}

fn main() -> i32 {
  let data: [2]i32 = [41, 1];
  let slice: []i32 = data[:];
  return first(&slice) - 41;
}
