tests/samples/negative/resources/move_borrow_slice_source_alias_after_move.ax
module move_borrow_slice_source_alias_after_move;

fn consume[T](value: T) -> void {
}

fn inspect[T](value: &T) -> void {
}

fn duplicate[T](value: T) -> void {
    let backing: [1]&T = [&value];
    let values: []const &T = backing[:];
    let [borrowed] = values else {
        return;
    };
    consume(value);
    inspect(borrowed);
}

fn main() -> i32 {
    return 0;
}
